@@ -661,3 +661,6 @@
 - Added Mature Spore Sac to the loot table of Starving Fungal Giant for the quests The Sporelings' Plight and More Spore Sacs.
 - Added Mature Spore Sac to the loot table of Starving Bog Lord for the quests The Sporelings' Plight and More Spore Sacs.
 - Updated the flags of Mature Spore Sac to allow every member of a group to loot it.
+- Added Discarded Nutriment to the loot table of Bog Lord for the quest A Question of Gluttony.
+- Added Discarded Nutriment to the loot table of Fungal Giant for the quest A Question of Gluttony.
+- Updated the flags of Discarded Nutriment to allow every member of a group to loot it.
